# claude-cellar

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md
docs/: design-fuse.md
src/: fuse.rs  main.rs  store.rs
systemd/: claude-cellar.service
tests/: bundle_smoke.sh  fuse_basic.rs  smoke.sh
